--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <nav class="navbar nav-pills navbar-expand-lg bg-primary" data-bs-theme="dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="img/ticketlogo.png" alt="Logo" width="95" height="35" class="d-inline-block align-text-top">
-                    TicketArg
+                    <img src="img/ticketlogo.png" alt="Logo" width="95" height="35">
+                    <h3>TicketArg</h3>
                 </a>
                 <ul class="nav nav-pills nav-fill">
                     <li class="nav-item">
