--- a/index.html
+++ b/index.html
@@ -3,153 +3,156 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
-    <!-- bootstrap -->
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>TicketArg</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
 </head>
+
 <body>
     <header>
-        <!-- inicio barra de navegación superior de la web -->
-        <nav class="navbar nav-pills navbar-expand-lg bg-primary" data-bs-theme="dark">
+        <!-- Inicio Barra de Navegación Superior de la Web -->
+        <nav class="navbar nav-pills navbar-expand-lg" data-bs-theme="dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <img src="img/ticketlogo.png" alt="Logo" width="95" height="35">
                     <h3>TicketArg</h3>
                 </a>
                 <ul class="nav nav-pills nav-fill">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Artistas</a>
+                        <a class="nav-link" href="#artistas">Artistas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Comprá Tickets</a>
+                        <a class="nav-link" href="buytickets.html">Comprá Tickets</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Tus Tickets</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">BackOffice</a>
+                        <a class="nav-link" href="#">Back-Office</a>
                     </li>
                 </ul>
             </div>
         </nav>
-        <!-- fin barra de navegación -->
+        <!-- Fin Barra de Navegación -->
     </header>
 
     <main>
-        <!-- inicio carousel -->
-        <div class="container-lg">
-            <div id="carousel" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <section class="carousel">
+            <!-- Inicio Carousel -->
+            <div class="container-lg">
+                <div id="carousel" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="img/show0.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>TicketArg</h5>
+                                <p>¡No te pierdas los shows de tus artistas favoritos!</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/show1.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>TicketArg</h5>
+                                <p>¡Presentamos el Lallapatuza!</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/show2.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>TicketArg</h5>
+                                <p>Artistas Internacionales</p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="img/show0.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>TicketArg</h5>
-                            <p>¡No te pierdas los shows de tus artistas favoritos!</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/show1.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>TicketArg</h5>
-                            <p>¡Presentamos el Lallapatuza!</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/show2.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>TicketArg</h5>
-                            <p>Artistas Internacionales</p>
-                        </div>
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
             </div>
-        </div>
-        <!-- fin carousel -->
-        
-        <!-- inicio galeria de artistas -->
-        <div class="container-fluid card-artistas">
-            <article>
-                <div class="card text-center text-bg-dark" style="width: 18rem;">
-                    <img src="img/brunomars.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Bruno Mars</h5>
-                    </div>
-                </div>
-            </article>
-            <article>
-                <div class="card text-center text-bg-dark" style="width: 18rem;">
-                    <img src="img/dualipa.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Dua Lipa</h5>
-                    </div>
-                </div>
-            </article>
-            <article>
-                <div class="card text-center text-bg-dark" style="width: 18rem;">
-                    <img src="img/weeknd.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">The Weeknd</h5>
-                    </div>
-                </div>
-            </article>
-            <article>
-                <div class="card text-center text-bg-dark" style="width: 18rem;">
-                    <img src="img/taylorswift.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Taylor Swift</h5>
-                    </div>
-                </div>
-            </article>
-            <article>
-                <div class="card text-center text-bg-dark" style="width: 18rem;">
-                    <img src="img/michaeljackson.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Michael Jackson</h5>
-                    </div>
-                </div>
-            </article>
-            <article>
-                <div class="card text-center text-bg-dark" style="width: 18rem;">
-                    <img src="img/BillieEilish.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Billie Eilish</h5>
-                    </div>
-                </div>
-            </article>
-        </div>
-        <!-- fin galeria artistas -->
+            <!-- Fin Carousel -->
+            <hr/>
+        </section>
 
+        <section class="galeria-artistas" id="artistas">
+            <div>
+                <h1>ARTISTAS</h1>
+            </div>
+            <!-- Inicio Galeria de Artistas -->
+            <div class="container-fluid card-artistas">
+                <article>
+                    <div class="card text-center text-bg-dark" style="width: 18rem;">
+                        <img src="img/brunomars.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Bruno Mars</h5>
+                        </div>
+                    </div>
+                </article>
+                <article>
+                    <div class="card text-center text-bg-dark" style="width: 18rem;">
+                        <img src="img/dualipa.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Dua Lipa</h5>
+                        </div>
+                    </div>
+                </article>
+                <article>
+                    <div class="card text-center text-bg-dark" style="width: 18rem;">
+                        <img src="img/weeknd.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">The Weeknd</h5>
+                        </div>
+                    </div>
+                </article>
+                <article>
+                    <div class="card text-center text-bg-dark" style="width: 18rem;">
+                        <img src="img/taylorswift.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Taylor Swift</h5>
+                        </div>
+                    </div>
+                </article>
+                <article>
+                    <div class="card text-center text-bg-dark" style="width: 18rem;">
+                        <img src="img/michaeljackson.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Michael Jackson</h5>
+                        </div>
+                    </div>
+                </article>
+                <article>
+                    <div class="card text-center text-bg-dark" style="width: 18rem;">
+                        <img src="img/BillieEilish.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Billie Eilish</h5>
+                        </div>
+                    </div>
+                </article>
+            </div>
+            <!-- Fin Galeria Artistas -->
+        </section>
     </main>
 
-
-
-
-    <footer>
-        <div class="container-fluid justify-content-center">
-            <footer class="last">
-                <a href="#">Preguntas Frecuentes</a> |
-                <a href="#">Contáctanos</a> |
-                <a href="#">Prensa</a> |
-                <a href="#">Conferencias</a> |
-                <a href="#">Términos y Condiciones</a> |
-                <a href="#">Privacidad</a> |
-                <a href="#">Descuentos</a>
-            </footer>
-        </div>
+    <footer class="last">
+            <a href="#">Preguntas Frecuentes</a> |
+            <a href="#">Contáctanos</a> |
+            <a href="#">Prensa</a> |
+            <a href="#">Conferencias</a> |
+            <a href="#">Términos y Condiciones</a> |
+            <a href="#">Privacidad</a> |
+            <a href="#">Descuentos</a>
     </footer>
 
 
