--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <a class="nav-link" href="#artistas">Artistas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="buytickets.html">Comprá Tickets</a>
+                        <a class="nav-link" href="tickets.html">Comprá Tickets</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Tus Tickets</a>
@@ -93,7 +93,7 @@
             <!-- Inicio Galeria de Artistas -->
             <div class="container-fluid card-artistas">
                 <article>
-                    <div class="card text-center text-bg-dark" style="width: 18rem;">
+                    <div class="card text-center text-bg-dark" style="width: 18rem;" data-artista="Bruno Mars">
                         <img src="img/brunomars.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Bruno Mars</h5>
@@ -101,7 +101,7 @@
                     </div>
                 </article>
                 <article>
-                    <div class="card text-center text-bg-dark" style="width: 18rem;">
+                    <div class="card text-center text-bg-dark" style="width: 18rem;" data-artista="Dua Lipa">
                         <img src="img/dualipa.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Dua Lipa</h5>
@@ -109,7 +109,7 @@
                     </div>
                 </article>
                 <article>
-                    <div class="card text-center text-bg-dark" style="width: 18rem;">
+                    <div class="card text-center text-bg-dark" style="width: 18rem;" data-artista="The Weeknd">
                         <img src="img/weeknd.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">The Weeknd</h5>
@@ -117,7 +117,7 @@
                     </div>
                 </article>
                 <article>
-                    <div class="card text-center text-bg-dark" style="width: 18rem;">
+                    <div class="card text-center text-bg-dark" style="width: 18rem;" data-artista="Taylor Swift">
                         <img src="img/taylorswift.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Taylor Swift</h5>
@@ -125,7 +125,7 @@
                     </div>
                 </article>
                 <article>
-                    <div class="card text-center text-bg-dark" style="width: 18rem;">
+                    <div class="card text-center text-bg-dark" style="width: 18rem;" data-artista="Michael Jackson">
                         <img src="img/michaeljackson.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Michael Jackson</h5>
@@ -133,7 +133,7 @@
                     </div>
                 </article>
                 <article>
-                    <div class="card text-center text-bg-dark" style="width: 18rem;">
+                    <div class="card text-center text-bg-dark" style="width: 18rem;" data-artista="Billie Eilish">
                         <img src="img/BillieEilish.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Billie Eilish</h5>
@@ -156,6 +156,19 @@
     </footer>
 
 
+    <!-- ---------------------------------------------------------------------------------------------------------------- -->
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            const cards = document.querySelectorAll(".card-artistas .card");
+            cards.forEach(card => {
+                card.addEventListener("click", function() {
+                    const artista = this.getAttribute("data-artista");
+                    localStorage.setItem("selectedArtista", artista);
+                    window.location.href = "tickets.html";
+                });
+            });
+        });
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
