--- a/tickets.html
+++ b/tickets.html
@@ -25,7 +25,7 @@
                         <a class="nav-link" href="index.html#artistas">Artistas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="buytickets.html">Comprá Tickets</a>
+                        <a class="nav-link" href="tickets.html">Comprá Tickets</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Tus Tickets</a>
@@ -70,7 +70,7 @@
                 <article>
                     <div class="card border-warning" style="width: 18rem;">
                         <div class="card-header text-bg-warning">          	
-                            <h4>Programador</h4>
+                            <h4 style="color:#646464">Programador</h4>
                         </div>
                         <div class="card-body">
                             <p>Tiene un descuento</p>
@@ -85,7 +85,7 @@
     
         <section class="mb-5">
             <!-- Sección Formulario -->
-            <div class="container container-max720">
+            <div class="container container-max720 formulario">
                 <div class="row">
                     <div class="col-12 text-center mb-4">
                         <h3>Valor de Ticket: <span class="fs-2 fw-bold">$100.000</span></h3>
@@ -167,7 +167,22 @@
         <a href="#">Descuentos</a>
     </footer>
 
-    <script src="buytickets.js"></script>
+    <!-- ------------------------------------------------------------------------------------------------------------ -->
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            const selectedArtista = localStorage.getItem("selectedArtista");
+            if (selectedArtista) {
+                const selectElement = document.getElementById("artistas");
+                for (let i = 0; i < selectElement.options.length; i++) {
+                    if (selectElement.options[i].text === selectedArtista) {
+                        selectElement.selectedIndex = i;
+                        break;
+                    }
+                }
+            }
+        });
+    </script>
+    <script src="tickets.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
