vinculados los scripts

--- a/tickets.html
+++ b/tickets.html
@@ -88,7 +88,7 @@
             <div class="container container-max720 formulario">
                 <div class="row">
                     <div class="col-12 text-center mb-4">
-                        <h3>Valor de Ticket: <span class="fs-2 fw-bold">$100.000</span></h3>
+                        <h3>Valor de Ticket: <span class="fs-2 fw-bold">$100.000,00</span></h3>
                     </div>
                 </div>
 
@@ -121,11 +121,11 @@
                     </div>
                     <!-- ------------------------------------------- -->
                     <div class="col-md-6 mb-3">
-                        <label for="fotos" class="form-label">Subir Documentación</label>
+                        <label for="fotos" class="form-label">Subir Documentación de Descuento</label>
                         <input type="file" class="form-control file" accept=".png, .jpg" id="fotos" name="fotos" multiple>
                     </div>
                     <div class="col-md-6 mb-3">
-                        <select class="form-select" id="artistas" name="artistas">
+                        <select class="form-select" id="artistas" name="artistas" style="background-color: #ffe20639; border: 3px solid #000;;">
                             <option value="" disabled selected>Seleccionar Artista</option>
                             <option value="artista1">Bruno Mars</option>
                             <option value="artista2">Dua Lipa</option>
@@ -142,6 +142,7 @@
                             Total a pagar: $
                         </div>
                     </div>
+                    <!-- ------------------------------------------ -->
                     <div class="col-md-4 mb-4">
                         <button class="btn btn-primary" id="resumen">Calcular Total</button>
                     </div>
