--- a/tickets.html
+++ b/tickets.html
@@ -31,7 +31,7 @@
                         <a class="nav-link" href="#">Tus Tickets</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Back-Office</a>
+                        <a class="nav-link" href="backoffice.html">Back-Office</a>
                     </li>
                 </ul>
             </div>
