paneles de back-office

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <main>
         <section class="carousel">
             <!-- Inicio Carousel -->
-            <div class="container-lg">
+            <div class="container-lg cont-carousel">
                 <div id="carousel" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -51,17 +51,17 @@
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="img/show0.jpg" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>TicketArg</h5>
-                                <p>¡No te pierdas los shows de tus artistas favoritos!</p>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
                             <img src="img/show1.jpg" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>TicketArg</h5>
                                 <p>¡Presentamos el Lallapatuza!</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item ">
+                            <img src="img/show0.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>TicketArg</h5>
+                                <p>¡No te pierdas los shows de tus artistas favoritos!</p>
                             </div>
                         </div>
                         <div class="carousel-item">
