--- a/backoffice.html
+++ b/backoffice.html
@@ -28,15 +28,15 @@
                             <div class="d-flex px-1">
                                 <div class= " col-4 text-aline-center" >
                                     <i class="fa-sharp fa-solid fa-ticket fa-bounce fa-2xl"></i>
-                                    <a class="btn btn-dark" href="#">Control de Tickets</a>
+                                    <a class="btn btn-dark" href="backoffice/controlTickets.html">Control de Tickets</a>
                                 </div>   	
                                 <div class= "col-4 text-aline-center ">
                                     <i class="fa-solid fa-person-chalkboard fa-bounce fa-2xl"></i>
-                                    <a class="btn btn-outline-dark" href="#">Control de Artistas</a>
+                                    <a class="btn btn-secondary" href="backoffice/controlArtistas.html">Control de Artistas</a>
                                 </div>
                                 <div class= "col-4 text-aline-center ">
                                     <i class="fa-solid fa-person-chalkboard fa-bounce fa-2xl"></i>
-                                    <a class="btn btn-warning" href="#">Control de Usuarios</a>
+                                    <a class="btn btn-warning" href="backoffice/controlUsuarios.html">Control de Usuarios</a>
                                 </div>
                             </div>
 						</div>
