--- a/backoffice.html
+++ b/backoffice.html
@@ -9,10 +9,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
     <style>
-		.fondoback
-		{
-			background-color: #0B5CD3;
-		}
+		.fondoback{background-color: #0B5CD3;}
+        div .button {padding:2em;}
 	</style>
 </head>
 
@@ -26,15 +24,15 @@
                             <img src="img/codoacodo.png" alt="Logo Codo a Codo" height=100" class="d-inline-block align-middle backoffice-img" loading="lazy">
                             <h2 class="text-center text-dark my-4">Panel de Control</h2>  
                             <div class="d-flex px-1">
-                                <div class= " col-4 text-aline-center" >
+                                <div class= " col-4 text-aline-center button">
                                     <i class="fa-sharp fa-solid fa-ticket fa-bounce fa-2xl"></i>
                                     <a class="btn btn-dark" href="backoffice/controlTickets.html">Control de Tickets</a>
                                 </div>   	
-                                <div class= "col-4 text-aline-center ">
+                                <div class= "col-4 text-aline-center button">
                                     <i class="fa-solid fa-person-chalkboard fa-bounce fa-2xl"></i>
                                     <a class="btn btn-secondary" href="backoffice/controlArtistas.html">Control de Artistas</a>
                                 </div>
-                                <div class= "col-4 text-aline-center ">
+                                <div class= "col-4 text-aline-center button">
                                     <i class="fa-solid fa-person-chalkboard fa-bounce fa-2xl"></i>
                                     <a class="btn btn-warning" href="backoffice/controlUsuarios.html">Control de Usuarios</a>
                                 </div>
