--- a/backoffice.html
+++ b/backoffice.html
@@ -35,10 +35,17 @@
                                 <div class= "col-4 text-aline-center button">
                                     <i class="fa-solid fa-person-chalkboard fa-bounce fa-2xl"></i>
                                     <a class="btn btn-warning" href="backoffice/controlUsuarios.html">Control de Usuarios</a>
-                                </div>
+                                </div> 
                             </div>
 						</div>
                     </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 offset-md-3 text-center">
+                    <a class="link-light backoffice-a" href="registrarse.html" style="font-size: 1.5rem;">
+                        <b>Registrarse</b>
+                    </a>
                 </div>
             </div>
             <div class="row">
@@ -48,6 +55,7 @@
                     </a>
                 </div>
             </div>
+            
         </div>
 	</div>
 	<!-- ------------------------------------------------------------------------------------ -->
