--- a/backoffice.html
+++ b/backoffice.html
@@ -41,9 +41,14 @@
                     </div>
                 </div>
             </div>
+            <div class="col-md-6 offset-md-3 text-center">
+                <a class="link-light backoffice-a" href="registrarse.html" style="font-size: 1.5rem;">
+                    <b>Iniciar sesión</b>
+                </a>
+            </div>
             <div class="row">
                 <div class="col-md-6 offset-md-3 text-center">
-                    <a class="link-light backoffice-a" href="registrarse.html" style="font-size: 1.5rem;">
+                    <a class="link-light backoffice-a" href="login.html" style="font-size: 1.5rem;">
                         <b>Registrarse</b>
                     </a>
                 </div>
