--- a/backoffice.html
+++ b/backoffice.html
@@ -55,7 +55,7 @@
             </div>
             <div class="row">
                 <div class="col-md-6 offset-md-3 text-center">
-                    <a class="link-light backoffice-a" href="index.html" style="font-size: 1.5rem;">
+                    <a class="link-light backoffice-a" href="home.html" style="font-size: 1.5rem;">
                         <b>Volver al sitio web</b>
                     </a>
                 </div>
