--- a/registrarse.html
+++ b/registrarse.html
@@ -18,13 +18,13 @@
     <!-- Inicio Barra de Navegación Superior de la Web -->
     <nav class="navbar nav-pills navbar-expand-lg" data-bs-theme="dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="home.html">
           <img src="img/ticketlogo.png" alt="Logo" width="95" height="35">
           <h3>Ticket Arg</h3>
         </a>
         <ul class="nav nav-pills nav-fill">
           <li class="nav-item">
-            <a class="nav-link" href="index.html#artistas">Artistas</a>
+            <a class="nav-link" href="home.html">Artistas</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="tickets.html">Comprá Tickets</a>
@@ -79,7 +79,7 @@
 
           <!-- ------------------------------------------ -->
           <div class="col-md-4 mb-4">
-           <a href="index.html"><button class="btn btn-primary" id="resumen">Inicio</button></a> 
+           <a href="home.html"><button class="btn btn-primary" id="resumen">Inicio</button></a> 
           </div>
 
           <div class="col-md-4 mb-4">
