--- a/index.html
+++ b/index.html
@@ -1,174 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <title>TicketArg</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <title>TicketArg</title>
+  <link rel="stylesheet" href="style.css"
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
+  <style>
+    body{display: flex; align-items: center; justify-content: center;}
+    main{border: 2px solid #000; border-radius: 1rem; padding: 4rem;}
+    .form-login{display:flex; border: 2px solid #000; border-radius: 0.5rem; padding: 2rem; background-color: #00000011;}
+    .label{width: 60%;background: linear-gradient(to left, black, #033b8f); color: #fff; border-radius: 1rem}
+  </style>
 </head>
 
 <body>
-    <header>
-        <!-- Inicio Barra de Navegación Superior de la Web -->
-        <nav class="navbar nav-pills navbar-expand-lg" data-bs-theme="dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">
-                    <img src="img/ticketlogo.png" alt="Logo" width="95" height="35">
-                    <h3>TicketArg</h3>
-                </a>
-                <ul class="nav nav-pills nav-fill">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#artistas">Artistas</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="tickets.html">Comprá Tickets</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Tus Tickets</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="backoffice.html">Back-Office</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-        <!-- Fin Barra de Navegación -->
-    </header>
+  <main>
+    <section class="mb-5">
+      <!-- Sección Formulario -->
+      <div class="container container-max720  formulario">
+        <div class="row d-flex justify-content-center">
+          <div class="col-12 text-center mb-4 label">
+            <h1 style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Iniciar sesión</h1>
+          </div>
+        </div>
 
-    <main>
-        <section class="carousel">
-            <!-- Inicio Carousel -->
-            <div class="container-lg cont-carousel">
-                <div id="carousel" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                    </div>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="img/show1.jpg" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>TicketArg</h5>
-                                <p>¡Presentamos el Lallapatuza!</p>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img src="img/show2.jpg" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>TicketArg</h5>
-                                <p>Artistas Internacionales</p>
-                            </div>
-                        </div>
-                        <div class="carousel-item ">
-                            <img src="img/show0.jpg" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>TicketArg</h5>
-                                <p>¡No te pierdas los shows de tus artistas favoritos!</p>
-                            </div>
-                        </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
-                </div>
-            </div>
-            <!-- Fin Carousel -->
-            <hr/>
-        </section>
+        <form class="row justify-content-center form-login" action="" method="">
+          <!-- -------------------------------------------- -->
+          <hr>
+          <div class="col-md-6 mb-3">
+            <label for="nombre-usuario" class="p-1">Nombre de Usuario</label>
+            <input id="nombre-usuario" class="form-control" type="text" name="nombre-usuario" min="1" max="20"
+              placeholder="Ingrese su usuario" />
+          </div>
+          <div class="col-md-6 mb-4">
+            <label for="contraseña" class="p-1">Contraseña</label>
+            <input id="contraseña" class="form-control" type="password" name="contraseña" min="1" max="20"
+              placeholder="Ingrese su contraseña" />
+          </div>
+          <!-- ------------------------------------------ -->
+          <div class="col-md-4 mb-4 btn">
+            <a href="home.html"><button class="btn btn-primary" id="resumen" type="submit">Iniciar Sesión</button></a> 
+          </div>
+          <div class="col-md-4 mb-4 btn">
+            <button class="btn btn-success" type="submit">Registrate</button>
+          </div>
+        </form>
+      </div>
+      <!-- Fin Sección Formulario -->
+    </section>
+  </main>
 
-        <section class="galeria-artistas" id="artistas">
-            <div>
-                <h1>ARTISTAS</h1>
-            </div>
-            <!-- Inicio Galeria de Artistas -->
-            <div class="container-fluid card-artistas">
-                <article>
-                    <div class="card text-center text-bg-dark" style="width: 18rem;" data-artista="Bruno Mars">
-                        <img src="img/brunomars.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Bruno Mars</h5>
-                        </div>
-                    </div>
-                </article>
-                <article>
-                    <div class="card text-center text-bg-dark" style="width: 18rem;" data-artista="Dua Lipa">
-                        <img src="img/dualipa.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Dua Lipa</h5>
-                        </div>
-                    </div>
-                </article>
-                <article>
-                    <div class="card text-center text-bg-dark" style="width: 18rem;" data-artista="The Weeknd">
-                        <img src="img/weeknd.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">The Weeknd</h5>
-                        </div>
-                    </div>
-                </article>
-                <article>
-                    <div class="card text-center text-bg-dark" style="width: 18rem;" data-artista="Taylor Swift">
-                        <img src="img/taylorswift.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Taylor Swift</h5>
-                        </div>
-                    </div>
-                </article>
-                <article>
-                    <div class="card text-center text-bg-dark" style="width: 18rem;" data-artista="Michael Jackson">
-                        <img src="img/michaeljackson.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Michael Jackson</h5>
-                        </div>
-                    </div>
-                </article>
-                <article>
-                    <div class="card text-center text-bg-dark" style="width: 18rem;" data-artista="Billie Eilish">
-                        <img src="img/BillieEilish.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Billie Eilish</h5>
-                        </div>
-                    </div>
-                </article>
-            </div>
-            <!-- Fin Galeria Artistas -->
-        </section>
-    </main>
-
-    <footer class="last">
-            <a href="#">Preguntas Frecuentes</a> |
-            <a href="#">Contáctanos</a> |
-            <a href="#">Prensa</a> |
-            <a href="#">Conferencias</a> |
-            <a href="#">Términos y Condiciones</a> |
-            <a href="#">Privacidad</a> |
-            <a href="#">Descuentos</a>
-    </footer>
-
-
-    <!-- ---------------------------------------------------------------------------------------------------------------- -->
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            const cards = document.querySelectorAll(".card-artistas .card");
-            cards.forEach(card => {
-                card.addEventListener("click", function() {
-                    const artista = this.getAttribute("data-artista");
-                    localStorage.setItem("selectedArtista", artista);
-                    window.location.href = "tickets.html";
-                });
-            });
-        });
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <!-- ------------------------------------------------------------------------------------------------------------ -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
