--- a/tickets.html
+++ b/tickets.html
@@ -16,13 +16,13 @@
         <!-- Inicio Barra de Navegación Superior de la Web -->
         <nav class="navbar nav-pills navbar-expand-lg" data-bs-theme="dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="home.html">
                     <img src="img/ticketlogo.png" alt="Logo" width="95" height="35">
                     <h3>TicketArg</h3>
                 </a>
                 <ul class="nav nav-pills nav-fill">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#artistas">Artistas</a>
+                        <a class="nav-link" href="home.html#artistas">Artistas</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="tickets.html">Comprá Tickets</a>
