--- a/tickets.html
+++ b/tickets.html
@@ -20,6 +20,7 @@
                     <img src="img/ticketlogo.png" alt="Logo" width="95" height="35">
                     <h3>TicketArg</h3>
                 </a>
+
                 <ul class="nav nav-pills nav-fill">
                     <li class="nav-item">
                         <a class="nav-link" href="home.html#artistas">Artistas</a>
@@ -28,10 +29,18 @@
                         <a class="nav-link" href="tickets.html">Comprá Tickets</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Tus Tickets</a>
+                        <a class="nav-link" href="myticket.html">Mis Tickets</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="backoffice.html">Back-Office</a>
+                    </li>
+                    <li class="nav-item" style="margin-left: 0.5em;">
+                        <button type="button" class="btn btn-danger" id="logout">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="25" fill="currentColor" class="bi bi-box-arrow-left" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M6 12.5a.5.5 0 0 0 .5.5h8a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5h-8a.5.5 0 0 0-.5.5v2a.5.5 0 0 1-1 0v-2A1.5 1.5 0 0 1 6.5 2h8A1.5 1.5 0 0 1 16 3.5v9a1.5 1.5 0 0 1-1.5 1.5h-8A1.5 1.5 0 0 1 5 12.5v-2a.5.5 0 0 1 1 0z"/>
+                                <path fill-rule="evenodd" d="M.146 8.354a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L1.707 7.5H10.5a.5.5 0 0 1 0 1H1.707l2.147 2.146a.5.5 0 0 1-.708.708z"/>
+                            </svg>
+                        </button>
                     </li>
                 </ul>
             </div>
@@ -183,6 +192,12 @@
             }
         });
     </script>
+    <script>
+        document.getElementById('logout').addEventListener('click', function() {
+            window.location.href = 'index.html';
+        });
+    </script>
+
     <script src="tickets.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
