--- a/registrarse.html
+++ b/registrarse.html
@@ -7,52 +7,36 @@
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="tickets.css">
   <title>TicketArg</title>
+  <link rel="stylesheet" href="style.css"
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
+  <style>
+    main{display: flex; align-items: center; justify-content: center; height: 100vh;}
+    section{border: 2px solid #000; border-radius: 1rem; padding: 4rem;}
+    .form-login{display:flex; border: 2px solid #000; border-radius: 0.5rem; padding: 2rem; background-color: #00000011;}
+    .label{width: 60%;background: linear-gradient(to left, black, #033b8f); color: #fff; border-radius: 1rem}
+  </style>
 </head>
 
 <body>
-  <header>
-    <!-- Inicio Barra de Navegación Superior de la Web -->
-    <nav class="navbar nav-pills navbar-expand-lg" data-bs-theme="dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="home.html">
-          <img src="img/ticketlogo.png" alt="Logo" width="95" height="35">
-          <h3>Ticket Arg</h3>
-        </a>
-        <ul class="nav nav-pills nav-fill">
-          <li class="nav-item">
-            <a class="nav-link" href="home.html">Artistas</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="tickets.html">Comprá Tickets</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Tus Tickets</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="backoffice.html">Back-Office</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <!-- Fin Barra de Navegación -->
-  </header>
-
   <main>
     <section class="mb-5">
       <!-- Sección Formulario -->
-      <div class="container container-max720 formulario">
-        <div class="row">
-          <div class="col-12 text-center mb-4">
-            <h3>¿Eres nuevo? <span class="fs-2 fw-bold">Registrate!</span></h3>
+      <div class="container container-max720  formulario">
+        <div class="col-12 text-center mb-4">
+          <a>
+            <img src="img/ticketlogo.png" alt="Logo" width="130" height="55">
+          </a>
+        </div>
+        <div class="row d-flex justify-content-center">
+          <div class="col-12 text-center mb-4 label">
+            <h1 style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">¿Eres nuevo? <span class="fs-2 fw-bold">¡Registrate!</span></h1>
           </div>
         </div>
 
-        <form class="row justify-content-center" action="" method="post">
-          <!-- -------------------------------------------- -->
+        <form class="row d-flex form-login" action="" method="">
+          <hr>
           <div class="col-md-6 mb-3">
             <input type="text" class="form-control" placeholder="Nombre" id="name" name="nombre">
           </div>
@@ -63,63 +47,32 @@
           <div class="col-md-12 mb-3">
             <input type="email" class="form-control" placeholder="Mail" id="mail" name="mail">
           </div>
-          <!-- -------------------------------------------- -->
           <hr>
           <div class="col-md-6 mb-3">
-            <label for="nombre-usuario" class="p-1">nombre de Usuario</label>
-            <input id="nombre-usuario" class="form-control" type="text" name="nombre-usuario" min="1" max="20"
-              placeholder="Ingrese su nombre de usuario" />
+              <label for="nombre-usuario" class="p-1">Nombre de Usuario</label>
+              <input id="nombre-usuario" class="form-control" type="text" name="nombre-usuario" min="1" max="20" placeholder="Ingrese su usuario" />
           </div>
           <div class="col-md-6 mb-4">
-            <label for="contraseña" class="p-1">Contraseña</label>
-            <input id="contraseña" class="form-control" type="password" name="contraseña" min="1" max="20"
-              placeholder="cree su contraseña" />
-
+              <label for="contraseña" class="p-1">Contraseña</label>
+              <input id="contraseña" class="form-control" type="password" name="contraseña" min="1" max="20" placeholder="Ingrese su contraseña" />
           </div>
-
-          <!-- ------------------------------------------ -->
-          <div class="col-md-4 mb-4">
-           <a href="home.html"><button class="btn btn-primary" id="resumen">Inicio</button></a> 
+          <div class="col-md-12 mb-4 btn">
+              <button class="btn btn-primary" id="crear-cuenta" type="button">Crear Cuenta</button>
           </div>
-
-          <div class="col-md-4 mb-4">
-            <button class="btn btn-success" type="submit">Registrarme</button>
-          </div>
-        </form>
+      </form>
       </div>
       <!-- Fin Sección Formulario -->
     </section>
   </main>
 
-  <footer class="last">
-    <a href="#">Preguntas Frecuentes</a> |
-    <a href="#">Contáctanos</a> |
-    <a href="#">Prensa</a> |
-    <a href="#">Conferencias</a> |
-    <a href="#">Términos y Condiciones</a> |
-    <a href="#">Privacidad</a> |
-    <a href="#">Descuentos</a>
-  </footer>
-
   <!-- ------------------------------------------------------------------------------------------------------------ -->
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      const selectedArtista = localStorage.getItem("selectedArtista");
-      if (selectedArtista) {
-        const selectElement = document.getElementById("artistas");
-        for (let i = 0; i < selectElement.options.length; i++) {
-          if (selectElement.options[i].text === selectedArtista) {
-            selectElement.selectedIndex = i;
-            break;
-          }
-        }
-      }
-    });
-  </script>
-  <script src="tickets.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
+  <script>
+      document.getElementById('crear-cuenta').addEventListener('click', function() {
+          window.location.href = 'index.html';
+      });
+  </script>
 </body>
-
 </html>
