--- a/tickets.html
+++ b/tickets.html
@@ -131,7 +131,7 @@
                     <!-- ------------------------------------------- -->
                     <div class="col-md-6 mb-3">
                         <label for="fotos" class="form-label">Subir Documentación de Descuento</label>
-                        <input type="file" class="form-control file" accept=".png, .jpg" id="fotos" name="fotos" multiple>
+                        <input type="file" class="form-control file" accept=".png, .jpg" id="fotos" name="fotos">
                     </div>
                     <div class="col-md-6 mb-3">
                         <select class="form-select" id="artistas" name="artistas" style="background-color: #ffe20639; border: 3px solid #000;;">
